[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/angelica/Dock/Menu.gd" type="Script" id=1]
[ext_resource path="res://addons/angelica/Themes/Hint.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/angelica/Dock/MenuTop.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/Dock/MenuVertical.gd" type="Script" id=4]
[ext_resource path="res://addons/angelica/Dock/MenuVerticalLeft.gd" type="Script" id=5]
[ext_resource path="res://addons/angelica/Dock/MenuFloat.gd" type="Script" id=6]
[ext_resource path="res://addons/angelica/Dock/Dock.gd" type="Script" id=7]
[ext_resource path="res://addons/angelica/Dock/State_machine.gd" type="Script" id=8]
[ext_resource path="res://addons/angelica/Dock/dock_bottom_spacing.tres" type="DynamicFont" id=9]
[ext_resource path="res://addons/angelica/Dock/dock_side_spacing.tres" type="DynamicFont" id=10]
[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=11]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.298039, 0.298039, 0.298039, 0.494118 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
corner_detail = 6

[sub_resource type="StyleBoxEmpty" id=3]
content_margin_bottom = 17.0

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.6, 0.6, 0.6, 0.133333 )
border_color = Color( 0.8, 0.8, 0.8, 0.4 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[node name="Dock" type="Node2D"]
script = ExtResource( 7 )

[node name="State_machine" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Bottom" type="Node2D" parent="State_machine"]

[node name="ColorRect" type="Panel" parent="State_machine/Bottom"]
anchor_left = -0.025
anchor_top = 0.119444
anchor_right = -0.025
anchor_bottom = 0.119444
margin_left = 62.0
margin_top = 341.0
margin_right = 575.0
margin_bottom = 372.0
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reflex" type="Node2D" parent="State_machine/Bottom"]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 57.8141, 314.383 )
scale = Vector2( 1, -1 )

[node name="Menu_reflex" type="RichTextLabel" parent="State_machine/Bottom/Reflex"]
anchor_top = -0.012
anchor_bottom = -0.012
margin_top = -75.0
margin_right = 531.0
margin_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/48/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="State_machine/Bottom"]
anchor_left = -0.025
anchor_top = 0.107444
anchor_right = -0.025
anchor_bottom = 0.107444
margin_left = 58.0
margin_top = 297.0
margin_right = 589.0
margin_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
size_flags_horizontal = 7
size_flags_vertical = 10
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
meta_underlined = false
tab_size = 1
scroll_active = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Float" type="Node2D" parent="State_machine"]
visible = false
position = Vector2( 33.7383, 46.6783 )

[node name="ColorRect" type="Panel" parent="State_machine/Float"]
visible = false
anchor_left = 0.0944941
anchor_top = 0.177176
anchor_right = 0.0944941
anchor_bottom = 0.177176
margin_left = 1.0
margin_top = 2.0
margin_right = 302.0
margin_bottom = 126.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reflex" type="Node2D" parent="State_machine/Float"]
visible = false
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 15.8595, 50.6882 )
scale = Vector2( 1, -1 )

[node name="Menu_reflex" type="RichTextLabel" parent="State_machine/Float/Reflex"]
anchor_top = -0.012
anchor_bottom = -0.012
margin_left = 12.0
margin_top = -129.0
margin_right = 261.0
margin_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/48/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="State_machine/Float"]
anchor_left = 0.0944941
anchor_top = 0.177176
anchor_right = 0.0944941
anchor_bottom = 0.177176
margin_left = 24.0
margin_top = 18.0
margin_right = 555.0
margin_bottom = 66.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/line_separation = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
fit_content_height = true
scroll_active = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="State_machine/Float" instance=ExtResource( 11 )]

[node name="Right" type="Node2D" parent="State_machine"]

[node name="ColorRect" type="Panel" parent="State_machine/Right"]
margin_left = -9.0
margin_top = 4.0
margin_right = 12.0
margin_bottom = 173.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reflex" type="Node2D" parent="State_machine/Right"]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( -10.7415, -0.209481 )
rotation = -3.14159
scale = Vector2( 1, -1 )

[node name="z" type="RichTextLabel" parent="State_machine/Right/Reflex"]
margin_left = -39.0
margin_top = 14.0
margin_right = 7.0
margin_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu_reflex" type="RichTextLabel" parent="State_machine/Right/Reflex"]
margin_left = -38.0
margin_top = 14.0
margin_right = 10.0
margin_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="State_machine/Right"]
margin_left = -52.0
margin_top = 15.0
margin_right = -7.0
margin_bottom = 357.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_fonts/normal_font = ExtResource( 10 )
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="Node2D" parent="State_machine"]
visible = false

[node name="ColorRect" type="Panel" parent="State_machine/left"]
margin_left = -16.7098
margin_top = 2.8028
margin_right = 4.29016
margin_bottom = 307.803
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reflex" type="Node2D" parent="State_machine/left"]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( -19.8548, -2 )
rotation = -3.14159
scale = Vector2( 1, -1 )

[node name="Menu_reflex" type="RichTextLabel" parent="State_machine/left/Reflex"]
anchor_top = -0.012
anchor_bottom = -0.012
margin_left = -25.0
margin_top = 9.0
margin_right = 4.0
margin_bottom = 361.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="State_machine/left"]
anchor_top = -0.012
anchor_bottom = -0.012
margin_left = 6.0
margin_top = 6.0
margin_right = 35.0
margin_bottom = 357.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top" type="Node2D" parent="State_machine"]
visible = false

[node name="Reflex" type="Node2D" parent="State_machine/top"]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 43.8107, -28.1972 )
scale = Vector2( 1, -1 )

[node name="Menu_reflex" type="RichTextLabel" parent="State_machine/top/Reflex"]
anchor_top = -0.012
anchor_bottom = -0.012
margin_left = -2.0
margin_top = -36.0
margin_right = 529.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="State_machine/top"]
anchor_top = -0.012
anchor_bottom = -0.012
margin_left = 43.0
margin_top = 6.84
margin_right = 573.0
margin_bottom = 40.84
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = false
size_flags_horizontal = 5
size_flags_vertical = 8
custom_colors/default_color = Color( 0.698039, 0.666667, 0.666667, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
bbcode_enabled = true
bbcode_text = "[img]res://addons/angelica/images/32/0000.png[/img]"
meta_underlined = false
tab_size = 1
scroll_active = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="Panel" parent="State_machine/top"]
margin_left = 52.0
margin_top = -24.0
margin_right = 555.0
margin_bottom = 6.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" parent="." instance=ExtResource( 2 )]
position = Vector2( 15.3959, 8.17035 )

[connection signal="meta_hover_ended" from="State_machine/Bottom/Menu" to="State_machine/Bottom/Menu" method="_on_Menu_meta_hover_ended"]
[connection signal="meta_hover_started" from="State_machine/Bottom/Menu" to="State_machine/Bottom/Menu" method="_on_Menu_meta_hover_started"]
[connection signal="mouse_exited" from="State_machine/Bottom/Menu" to="State_machine/Bottom/Menu" method="_on_Menu_mouse_exited"]
[connection signal="meta_hover_ended" from="State_machine/Float/Menu" to="State_machine/Float/Menu" method="_on_Menu_meta_hover_ended"]
[connection signal="meta_hover_started" from="State_machine/Float/Menu" to="State_machine/Float/Menu" method="_on_Menu_meta_hover_started"]
[connection signal="mouse_exited" from="State_machine/Float/Menu" to="State_machine/Float/Menu" method="_on_Menu_mouse_exited"]
[connection signal="meta_hover_ended" from="State_machine/Right/Menu" to="State_machine/Right/Menu" method="_on_Menu_meta_hover_ended"]
[connection signal="meta_hover_started" from="State_machine/Right/Menu" to="State_machine/Right/Menu" method="_on_Menu_meta_hover_started"]
[connection signal="mouse_exited" from="State_machine/Right/Menu" to="State_machine/Right/Menu" method="_on_Menu_mouse_exited"]
[connection signal="meta_hover_ended" from="State_machine/left/Menu" to="State_machine/left/Menu" method="_on_Menu_meta_hover_ended"]
[connection signal="meta_hover_started" from="State_machine/left/Menu" to="State_machine/left/Menu" method="_on_Menu_meta_hover_started"]
[connection signal="mouse_exited" from="State_machine/left/Menu" to="State_machine/left/Menu" method="_on_Menu_mouse_exited"]
[connection signal="meta_hover_ended" from="State_machine/top/Menu" to="State_machine/top/Menu" method="_on_Menu_meta_hover_ended"]
[connection signal="meta_hover_started" from="State_machine/top/Menu" to="State_machine/top/Menu" method="_on_Menu_meta_hover_started"]
[connection signal="mouse_exited" from="State_machine/top/Menu" to="State_machine/top/Menu" method="_on_Menu_mouse_exited"]
